Prevent a zero-sized browser contents

Allowing a browser window to be resized such that
the contents view's size is 0x0 caused the contents
view's window to become invisble and stop it from
being able to accept events.

Instead we use a minimum size of 1x1 for the contents.

BUG=847179

Change-Id: I7790d5e2e4862fce8bb19a5c7d3134b45c6a0c63
Reviewed-on: https://chromium-review.googlesource.com/1141344
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Ahmed Fakhry <afakhry@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575907}
Former-commit-id: 4ab66959410437e3d4e4e566ae096d56e9fdb06b